@@ -1,3 +1,10 @@
+2011-09-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/50442
+	Revert:
+	PR c++/49267
+	* g++.dg/cpp0x/rv-conv1.C: New.
+
 2011-09-16  Jason Merrill  <jason@redhat.com>
 
 	PR c++/50424
