@@ -1,3 +1,11 @@
+2011-09-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/50442
+	Revert:
+	PR c++/49267
+	* call.c (compare_ics): rvaluedness_matches_p can differ
+	based on the source type, not just target.
+
 2011-09-16  Jason Merrill  <jason@redhat.com>
 
 	PR c++/50424
